tests/ui/nested_writes/nested_set_phase_5e.stderr
error: Failed to parse schema: Schema file 'prax/schema.prax' not found. Searched in:
         - CARGO_MANIFEST_DIR/prax/schema.prax
         - (absolute) prax/schema.prax
         - (current_dir) prax/schema.prax
 --> tests/ui/nested_writes/nested_set_phase_5e.rs:6:1
  |
6 | prax_orm::prax_schema!("prax/schema.prax");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `prax_orm::prax_schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unknown field `posts` on model `User` in `data:` block
  --> tests/ui/nested_writes/nested_set_phase_5e.rs:12:13
   |
12 |             posts: {
   |             ^^^^^
